feat(bff): 智能体新增推荐问题
